name:                byteunits
version:             0.1.0.0
description:         Human friendly workings with byte units
license:             BSD3
license-file:        LICENSE
author:              CabalSaneDefault
maintainer:          nobody
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules: ByteUnits
  build-depends:       base >=4.9 && <4.10
                       , safe
  default-language:    Haskell2010

Test-Suite testing-example
    Type:          exitcode-stdio-1.0
    Main-is:       Tests.hs
    build-depends: base
                 , Cabal
                 , QuickCheck
                 , byteunits